Remove references to Synergy

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Synergy App Store</title>
+<title>JBoss Hello World</title>
 
 <style media="screen" type="text/css">
 html, body {
